[tool.poetry]
name = "simulador-financiamento"
version = "0.1.0"
description = ""
authors = ["Eduardo Quelotti <eduardoquelotti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
